--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ footer{
 <section id="home">
     <div class="box">
         <h1 class="hero-text">Hi I am Leslie Kay</h1>
-        <h2 class="sub-text">An IT student in Madredijos Community College</h2>
+        <h2 class="sub-text">An IT Student in Madridejos Community College</h2>
     </div>
 </section>
 
@@ -217,7 +217,7 @@ footer{
 </section>
 
 <footer>
-    © 2026 Leslie Kay C. Espina | IT Student Portfolio
+    © 2026 Leslie Kay C. Espina | Leslie Portfolio
 </footer>
 
 </body>
