--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ footer{
     <h1>My Portfolio</h1>
     <ul>
         <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#Personal Info">Personal Info</a></li>
         <li><a href="#objective">Objective</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -161,7 +161,7 @@ footer{
 <!-- ABOUT -->
 <section id="about">
     <div class="box">
-        <h2>My Portfolio</h2>
+        <h2>Personal Info</h2>
         <p><strong>Name:</strong> Leslie Kay C. Espina</p>
         <p><strong>Course:</strong> Bachelor of Science in Information Technology</p>
         <p><strong>Year:</strong> 3rd Year College</p>
