--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ footer{
     </div>
 </section>
 
-<!-- ABOUT -->
-<section id="about">
+<!-- Personal Info -->
+<section id="Personal Info">
     <div class="box">
         <h2>Personal Info</h2>
         <p><strong>Name:</strong> Leslie Kay C. Espina</p>
