--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ footer{
     <h1>My Portfolio</h1>
     <ul>
         <li><a href="#home">Home</a></li>
-        <li><a href="#Personal Info">Personal Info</a></li>
+        <li><a href="#personal Info">Personal Info</a></li>
         <li><a href="#objective">Objective</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -159,7 +159,7 @@ footer{
 </section>
 
 <!-- Personal Info -->
-<section id="Personal Info">
+<section id="personal Info">
     <div class="box">
         <h2>Personal Info</h2>
         <p><strong>Name:</strong> Leslie Kay C. Espina</p>
