--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@ footer{
         <h2>Projects</h2>
         <div class="card-container">
             <div class="card">
-                <h3>Basic HTML Webpage</h3>
-                <p>A beginner webpage created using basic HTML elements.</p>
+                <h3>Basic HTML</h3>
+                <p>A basic html is the foundation or skeleton of a website.</p>
             </div>
             <div class="card">
-                <h3>Simple Layout Design</h3>
-                <p>A basic webpage organized neatly using HTML and CSS.</p>
+                <h3>Basic Layout Design</h3>
+                <p>A basic layout design is how you arrange things on a page so it looks neat and readable.</p>
             </div>
         </div>
     </div>
